# docs/swagger.json
@@ -1,8 +1,21 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is the API for the Spade Tenant Application",
+        "title": "Spade Tenant API",
+        "termsOfService": "https://spade.storage",
+        "contact": {
+            "name": "API Support",
+            "url": "https://docs.spade.storage"
+        },
+        "license": {
+            "name": "Apache 2.0 Apache-2.0 OR MIT",
+            "url": "https://github.com/data-preservation-programs/spade/blob/master/LICENSE.md"
+        },
+        "version": "1.0.0"
     },
+    "host": "api.spade.storage",
+    "basePath": "/",
     "paths": {
         "/handleHealth": {
             "get": {
@@ -11,17 +24,87 @@
                     "application/json"
                 ],
                 "summary": "Simple health check endpoint",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Auth token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.ResponseEnvelope"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "Response": {
+                                            "$ref": "#/definitions/api.HealthResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {}
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "api.HealthResponse": {
+            "type": "object",
+            "properties": {
+                "alive": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "api.ResponseEnvelope": {
+            "type": "object",
+            "properties": {
+                "error_code": {
+                    "type": "integer"
+                },
+                "error_lines": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "error_slug": {
+                    "type": "string"
+                },
+                "info_lines": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "request_id": {
+                    "type": "string"
+                },
+                "response": {},
+                "response_code": {
+                    "type": "integer"
+                },
+                "response_entries": {
+                    "type": "integer"
+                },
+                "response_state_epoch": {
+                    "type": "integer"
+                },
+                "response_timestamp": {
+                    "type": "string"
                 }
             }
         }
